--- a/about.html
+++ b/about.html
@@ -4,7 +4,18 @@ section-type: default
 title: About
 ---
 ## About
-
-Timeline Jekyll Theme is available on [Github](https://github.com/kirbyt/timeline-jekyll-theme).
-
-Lorem ipsum dolor sit amet, eam sint magna vivendo ex, et intellegam delicatissimi usu. Purto corpora adipisci eos cu, qui quaestio vulputate ei, an dico dicant eruditi eum. Ut omnium commodo eligendi duo, eu minim consul delicatissimi vim. Te sit errem docendi, saepe expetenda delicatissimi eum et. Ex pri cetero blandit scriptorem, et mel libris tamquam.
+死了都要爱
+不淋漓尽致不痛快
+感情多深只有这样
+才足够表白
+死了都要爱
+不哭到微笑不痛快
+宇宙毁灭心还在
+把每天当成是末日来相爱
+一分一秒都美到泪水掉下来
+不理会别人是看好或看坏
+只要你勇敢跟我来
+爱不用刻意安排
+凭感觉去亲吻相拥就会很愉快
+享受现在别一开怀就怕受伤害
+许多奇迹我们相信才会存在
