--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@ section-type: default
 title: About
 ---
 ## About
+Happy Birthday To You at 21 Years Old!
+Sorry that I cannot present my gift and greetings to you. 
+
 死了都要爱
 
 不淋漓尽致不痛快
